Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2647

Adding Maemo target should not silently mess with the project.

    XMLWordPrintable

Details

    • d23afc8e61ca78c20ca35daafec35ce31af066e9

    Description

      Since adding a maemo target messes around with the project, the user needs to be informed about the changes, with the option to cancel.
      I.e. "these files will be created, these changes are made to these pro files".
      It might also make sense to let the user exclude some app pro files in case of subdirs projects.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes