Maemo: Don't create desktop files, ask before updating project files.

Also don't waste performance by repeatedly reacting to the same
project file change.
This is relevant for bigger projects to which a Maemo target might
have been added by mistake.

Task-number: QTCREATORBUG-2647
Reviewed-by: kh1